--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,10 @@
 
 <body>
 	<h1>This is Homepage</h1>
+	<a href="/show">Show Employees</a>
+	</br>
 	<a href="/add">Add Employee</a>
-   <p>Hello World</p>
+   
    
 </body>
 
