--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,12 +15,14 @@
 	<h4 th:text="${msg}"></h4>
 	
 	<form action="/addEmp" method="post">
-		<input type="text" name="id" placeholder="Enter id" required><br>
-		<input type="text" name="name" placeholder ="Enter name" required><br>
-		<input type="text" name="designation"  placeholder ="Enter designation "required ><br>
-		<input type="text" name="salary" placeholder="Enter salary" required ><br>
+		<input type="text" name="id" placeholder="Enter id" th:value="${emp?.id}" required><br>
+		<input type="text" name="name" placeholder ="Enter name"  th:value="${emp?.name}" required><br>
+		<input type="text" name="designation"  placeholder ="Enter designation "  th:value="${emp?.designation}" required ><br>
+		<input type="text" name="salary" placeholder="Enter salary"  th:value="${emp?.salary}" required ><br>
 		<input type="reset"> <input type="submit">
 	</form>
+	
+	<a href="/show">See all Employees</a>
 	
    
 </body>
